--- a/land1/css/styles.css
+++ b/land1/css/styles.css
@@ -159,7 +159,7 @@ header .flex-control-nav {
 }
 
 #newsletter {
-    background-color: #cc2424;
+    background-color: #2196f3;
     padding: 40px 0
 }
 
@@ -263,7 +263,8 @@ header .flex-control-nav {
 }
 
 #about h2 {
-    color: #cc2424
+    color: #cc2424;
+    font-size:55px;
 }
 
 #about p {
@@ -673,7 +674,6 @@ footer .address {
     font-weight: 800;
     margin: 30px 0 10px 0
 }
-
 @media(min-width:1200px) {
     body {
         font-size: 18px
@@ -764,9 +764,13 @@ footer .address {
     h2 {
         font-size: 26px
     }
-    .navbar {
-        position: fixed!important
+    #about h2 {
+        color: #cc2424;
+        font-size:45px;
     }
+    /*.navbar {
+        position: fixed!important
+    }*/
     header h1 {
         margin: 0 0 16px 0;
         font-size: 28px
@@ -841,8 +845,12 @@ footer .address {
     .container {
         padding: 0 40px
     }
-    .navbar {
+    /*.navbar {
         position: fixed!important
+    }*/
+    #about h2 {
+        color: #cc2424;
+        font-size:45px;
     }
     .navbar-fixed-top {
         margin-left: 0!important;
@@ -973,8 +981,15 @@ footer .address {
     h2 {
         font-size: 24px
     }
-    .navbar {
+    /*.navbar {
         position: fixed!important
+    }*/
+    #about h2 {
+        color: #cc2424;
+        font-size:35px;
+    }
+    .supelogo {
+        font-size: 35px!important;
     }
     .navbar-fixed-top {
         margin-left: 0!important;
