--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,9 @@ a {
     color: #cc2424;
     text-decoration: none!important
 }
+.myico {
+    padding-right: 10px;
+}
 
 h1 {
     font-size: 34px
