отступ между горячей линией на телефоне

--- a/css/styles.css
+++ b/css/styles.css
@@ -875,6 +875,9 @@ footer .address {
         padding-left: 0!important;
         padding-right: 0!important
     }
+    .hotline{
+        padding-top: 20px;
+    }
     .container {
         padding: 0 40px
     }
